# sshuttle

./: .gitignore  pyproject.toml  setup.py
sshuttle/: cli.py
