[tool.poetry]
name = "sshuttle"
version = "0.1.1"
description = "sshuttle is an ssh vehicle for your environment"
authors = ["Justin Kinney <justin.kinney@oracle.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.poetry.scripts]
sshuttle = 'sshuttle.cli:cli'
